오탈자 수정: